data/derived/comb/progs/unify/prog4010.ml.out
Characters 84-100:
  | head::tail -> head::listReverse tail::tail;;
                        ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
